add coderay syntax highlighting

--- a/views/master.sass
+++ b/views/master.sass
@@ -1,5 +1,6 @@
 @import "mixins.sass"
 @import "colors.sass"
+@import "coderay.scss"
 
 // Variables
 
@@ -244,3 +245,4 @@ nav.categories
 
 div.feed
   margin: $base-vertical-margin 0
+
