--- a/views/coderay.scss
+++ b/views/coderay.scss
@@ -9,6 +9,9 @@
   margin: 12px 0;
 }
 .CodeRay pre {
+  background-color: #232323;
+  font-family: 'Courier New', 'Terminal', monospace;
+  color: #E6E0DB;
   margin: 0px;
   padding: 0px;
 }
